unpackaged/main/default/objects/SDO_Sales_ChannelTeam__c/SDO_Sales_ChannelTeam__c.object-meta.xml
<CustomObject>
    <description>Assigns specific resources to a channel plan. Align resources with objectives, and provide a clear picture to partners of who their channel support team is.</description>
    <label>Channel Team</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Channel Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>