unpackaged/main/default/objects/SDO_Sales_ChannelTeam__c/fields/SDO_Experience_Channel_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Channel_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Plan</label>
    <referenceTo>SFDC_Channel_Account_Plan__c</referenceTo>
    <relationshipLabel>Channel Team</relationshipLabel>
    <relationshipName>R00N4S000003A6xZUAS</relationshipName>
    <type>Lookup</type>
</CustomField>