unpackaged/main/default/objects/SDO_Sales_ChannelTeam__c/fields/SDO_Experience_Resource__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Team</relationshipLabel>
    <relationshipName>R00N4S000003A6xIUAS</relationshipName>
    <type>Lookup</type>
</CustomField>