unpackaged/main/default/objects/SDO_Sales_ChannelTeam__c/fields/SDO_Experience_Role__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Restocking</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Shipments</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Channel Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>